[gd_scene load_steps=21 format=2]

[ext_resource path="res://Levels/TheGate.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenery/Wall/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/TheGate/TheGate.jpg" type="Texture" id=6]
[ext_resource path="res://Scenery/Portal/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Fallshade/Board.png" type="Texture" id=8]
[ext_resource path="res://Levels/TheGate/Mage2.png" type="Texture" id=9]
[ext_resource path="res://Levels/TheGate/Mage1.png" type="Texture" id=10]
[ext_resource path="res://NPC/GenericNPC/GenericNPC.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/TheGate/Mage3.png" type="Texture" id=12]
[ext_resource path="res://Levels/TheGate/Cast.png" type="Texture" id=13]
[ext_resource path="res://Levels/Fallshade_Level.tscn" type="PackedScene" id=14]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 96, 110 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 96, 110 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 96, 110 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 288, 0, 96, 110 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 96, 110 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 6 ), SubResource( 6 ), SubResource( 6 ) ],
"loop": false,
"name": "Cast",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 91.7805

[node name="TheGate" type="Node2D"]
position = Vector2( 8, 0 )
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Ref" type="Sprite" parent="."]
position = Vector2( 496, 376 )
scale = Vector2( 1.3913, 1.3913 )
texture = ExtResource( 6 )

[node name="Walls" type="Node2D" parent="."]
visible = false

[node name="Wall" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( -435.15, 568 )
size = Vector2( 1472, 32 )

[node name="Wall2" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( -361.68, 391.977 )
size = Vector2( 320, 32 )

[node name="Wall3" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( -44.5441, -212.678 )
size = Vector2( 32, 640 )

[node name="Wall4" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 1016, -48 )
size = Vector2( 32, 640 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 184, 472 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="PortalMage" parent="." instance=ExtResource( 7 )]
position = Vector2( 906.534, 461.913 )
level = ExtResource( 14 )
active = false

[node name="Board" parent="." instance=ExtResource( 11 )]
position = Vector2( 55.7011, 549.092 )
sprite = ExtResource( 8 )
speech = "<- De volta para a Floresta Plana"

[node name="Mage" parent="." instance=ExtResource( 11 )]
position = Vector2( 667.992, 526.092 )
sprite = ExtResource( 8 )
speech = "Mago: VOCÊ NÃO PASSARÁ!

Hum, cof, cof... Olá Arcano. Eu vi o seu caminho que você está trilhando. Se quiser usar o meu portal para prosseguir em sua jornada, você deve me trazer o Cristal Verde da Floresta Plana."

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mage"]
frames = SubResource( 1 )
animation = "Idle"
frame = 1
speed_scale = 0.7
playing = true
flip_h = true

[node name="ThePlains" type="Area2D" parent="."]
position = Vector2( -174.403, 496.406 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThePlains"]
position = Vector2( -6.80188, 2.72076 )
shape = SubResource( 7 )
[connection signal="body_entered" from="Mage" to="." method="_on_Mage_body_entered"]
[connection signal="body_exited" from="Mage" to="." method="_on_Mage_body_exited"]
[connection signal="animation_finished" from="Mage/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="ThePlains" to="." method="_on_ThePlains_body_entered"]
